# Cutie

./: pyproject.toml
cutie/utils/: get_default_model.py
